# protobuf

./: MODULE.bazel  protobuf_deps.bzl
.github/workflows/: test_cpp.yml  test_csharp.yml  test_java.yml  test_php_ext.yml  test_python.yml  test_ruby.yml  test_rust.yml  test_upb.yml
bazel/tests/: proto_common_compile_tests.bzl
conformance/: text_format_failure_list_python.txt  text_format_failure_list_python_cpp.txt  text_format_failure_list_python_upb.txt
editions/golden/: compare_cpp_codegen_failure.xml
hpb/: BUILD  hpb.cc  hpb_extension_lock.cc  hpb_extension_lock_test.cc  hpb_internal_test.cc  repeated_field.h
hpb_generator/tests/: BUILD
java/core/: BUILD.bazel
lua/: main.c
php/ext/google/protobuf/: php-upb.c  php-upb.h
pkg/: BUILD.bazel
protos/: BUILD  protos_extension_lock.h  protos_internal.h  protos_traits.h
protos_generator/tests/: test_generated.cc
python/: README.md  message.c
python/google/protobuf/internal/: well_known_types.py  well_known_types_test.py
rust/: cpp.rs  upb.rs
rust/cpp_kernel/: cpp_api.cc
rust/test/shared/: accessors_test.rs  matchers.rs
rust/test/upb/: BUILD  debug_string_test.rs
rust/upb/: text.rs
src/google/protobuf/: cpp_features.pb.cc  cpp_features.pb.h  cpp_features.proto  descriptor.cc  descriptor.h  descriptor.pb.cc  descriptor.pb.h  descriptor.proto  descriptor_unittest.cc  extension_set.h  extension_set_heavy.cc  feature_resolver_test.cc  generated_enum_util.cc  generated_message_tctable_impl.h  generated_message_tctable_lite.cc  repeated_field_unittest.cc  repeated_ptr_field.h  text_format_unittest.cc  unittest.proto  unittest_lite.proto
src/google/protobuf/io/cpp_utils/: BUILD.bazel  namespace_printer.cc  namespace_printer.h  namespace_printer_unittest.cc
toolchain/: toolchains.bazelrc
upb/: BUILD
upb/bazel/: BUILD  upb_c_proto_library.bzl  upb_minitable_proto_library.bzl  upb_proto_reflection_library.bzl
upb/bazel/upb_proto_library_internal/: aspect.bzl
upb/reflection/: file_def.c  message.h
upb/text/: debug_string.c  encode_debug_test.cc
upb/text/internal/: encode.c
upb/upb/util/: compare_test.cc  def_to_proto_fuzz_test.cc  def_to_proto_test.cc  def_to_proto_test.h  required_fields_test.cc
upb/upb/wire/: eps_copy_input_stream_test.cc
upb/upbc/: BUILD
upb/util/: compare_test.cc  def_to_proto_fuzz_test.cc  def_to_proto_test.cc  def_to_proto_test.h  required_fields.c  required_fields.h  required_fields_test.cc
upb/wire/: decode.c  decode.h  encode.c  encode.h  eps_copy_input_stream_test.cc  reader.h
(+31 files in other folders)
